# cribbagehelper

./: .gitignore  LICENSE  Makefile  README.md  common.mk  extensions.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
cribbagehelper/: Makefile  __init__.pxd  __init__.py  version.py
cribbagehelper/core/: Makefile  __init__.pxd  __init__.py
cribbagehelper/core/card/: Makefile  __init__.pxd  __init__.py  card.pxd  card.pyx
cribbagehelper/core/card/src/: Makefile  __init__.pxd  card.h
cribbagehelper/core/card/tests/: Makefile  test_card.py
cribbagehelper/core/deck/: Makefile
cribbagehelper/core/deck/src/: Makefile  deck.c  deck.h
cribbagehelper/core/hand/: Makefile  __init__.pxd  __init__.py  hand.c  hand.pxd  hand.pyx
cribbagehelper/core/hand/src/: Makefile  __init__.pxd  hand.c  hand.h
cribbagehelper/core/hand/tests/: Makefile  test_hand.py
cribbagehelper/forecast/: Makefile
cribbagehelper/forecast/src/: Makefile  forecast.c  forecast.h
cribbagehelper/scorehand/: Makefile  __init__.pxd  __main__.py  scoreBundle.pxd  scoreBundle.pyx
cribbagehelper/scorehand/src/: Makefile  __init__.pxd  fifteens.c  fifteens.h  flush.c  flush.h  heels.c  heels.h  knobs.c  knobs.h  pairs.c  pairs.h  runs.c  runs.h  score.c  score.h  subsets.c  subsets.h
cribbagehelper/scorehand/tests/: Makefile  rng_hands.py  test_hands.out  test_scorehand.py  test_scores.txt
cribbagehelper/splithand/: Makefile
